Add ballroom pic

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           <p class="lead">Hi! My name is Alexis, though I typically go by Lexi. I am a current junior at Tufts University majoring in Computer Science and Biopsychology. 
                                         I really enjoy corgis, programming, ballroom dancing, and chocolate. This website is a work in progress!</p>
         </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive center-block" src="Ballroom_Dancing.jpg" alt="Me ballroom dancing, performing a move called a develope">
+        </div>
       </div>
 
       <hr class="featurette-divider" id="projects">
@@ -105,7 +108,7 @@
           <p class="lead">The best way to get in touch is to <a href="mailto: Alexis.Galantino@tufts.edu"> email me!</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="Corgi_Pic.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="Corgi_Pic.png" alt="A corgi with its head cocked, smiling">
         </div>
       </div>
 
