--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Aexis Galantino's Homepage">
     <meta name="author" content="Aexis Galantino">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="corgiclipart.ico">
 
     <title>Alexis Galantino</title>
 
@@ -20,9 +20,6 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -31,6 +28,7 @@
 
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/5f04b51ce6.js"></script>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -41,12 +39,6 @@
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
               <a class="navbar-brand" href="#">Alexis Galantino</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -81,15 +73,23 @@
                                         I really enjoy corgis, programming, ballroom dancing, and chocolate. This website is a work in progress!</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="Ballroom_Dancing.jpg" alt="Me ballroom dancing, performing a move called a develope">
+          <img class="featurette-image img-responsive center-block" src="Ballroom_Dancing.jpg" alt="Me ballroom dancing, performing a move called a develope" width="350">
         </div>
       </div>
 
       <hr class="featurette-divider" id="projects">
 
       <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">My Projects</h2>
+        <div class="row">
+          <div class="col-md-7 col-md-push-5">
+            <h2 class="featurette-heading">My Projects</h2>
+          </div>
+        </div>
+        <div class="row">
+        <div class="col-md-5"> <font size="7">
+          <i class= "fa fa-desktop fa-5x"></i> </font>
+        </div>
+        <div class="col-md-7">
           <p class="lead">I love working on projects with friends, both for class and for fun. Here are some of the things I've worked on:
             <ul class="lead">
               <li> <a href="https://github.com/galantlex/megabites">Megabites</a>: A collaborative food ordering webapp. </li>
@@ -98,6 +98,7 @@
             </ul>
           </p>
         </div>
+        </div>
       </div>
 
       <hr class="featurette-divider" id="contact">
@@ -105,10 +106,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Contact Me</h2>
-          <p class="lead">The best way to get in touch is to <a href="mailto: Alexis.Galantino@tufts.edu"> email me!</a></p>
-        </div>
-        <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="Corgi_Pic.png" alt="A corgi with its head cocked, smiling">
+          <p class="lead">The best way to get in touch is to <a href="mailto:Alexis.Galantino@tufts.edu"> email me!</a></p>
         </div>
       </div>
 
