--- a/projects.html
+++ b/projects.html
@@ -7,15 +7,13 @@
   <body>
     <nav>
       <ul class="nav-list rounded-corners">
-        <li class="nav-link rounded-corners active"> <a href="index.html">Home</a> </li>
+        <li class="nav-link rounded-corners"> <a href="index.html">Home</a> </li>
         <li class="nav-link"> <a href="bio.html"> Bio </a> </li>
         <li class="nav-link"> <a href="resume.html"> Resume </a></li>
-        <li class="nav-link"> <a href="projects.html">Projects </a> </li>
+        <li class="nav-link active"> <a href="projects.html">Projects </a> </li>
       </ul>
     </nav>
     <div class="page-body">
-      <h1> Lexi Galantino </h1>
-      <img src="Professional_Picture.png" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
     </div>
   </body>
 </html>
