--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,21 @@
       </ul>
     </nav>
     <div class="page-body">
-      <p>Resume goes here</p>
+      <div class="resume">
+      <h1> Lexi Galantino </h1>
+      <h3> github.com/galantlex &middot galantino.pw &middot contact@galantino.pw </h3>
+      <div class="section-header">
+        <p> Education </p>
+        <hr/> 
+      </div>
+      <div class="section-header">
+        <p> Experience </p>
+        <hr/> 
+      </div>
+      <div class="section-header">
+        <p> Skills </p>
+        <hr/> 
+      </div>
     </div>
   </body>
 </html>
