add education section of resume

--- a/resume.html
+++ b/resume.html
@@ -17,17 +17,37 @@
       <div class="resume">
       <h1> Lexi Galantino </h1>
       <h3> github.com/galantlex &middot galantino.pw &middot contact@galantino.pw </h3>
-      <div class="section-header">
+      <div class="resume-header">
         <p> Education </p>
         <hr/> 
       </div>
-      <div class="section-header">
+      <div class="resume-section">
+      <div class="row">
+        <div class="resume-subheader"> Tufts University </div>
+        <div class="resume-text"> Class of 2018 &middot Biopsychology &amp Computer Science &middot 3.88 GPA </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader"> Coursework </div>
+        <div class="resume-text"> Programming Languages &middot Machine Structure and Assembly Language &middot Data Structures &middot Organic Chemistry 
+               &middot General Genetics &middot Brain and Behavior &middot Biochemistry </div>
+       </div>
+       <div class="row">
+        <div class="resume-subheader">Leadership </div> 
+        <div class="resume-text">Internal Logistics Officer for Women in Computer Science &middot Competition Coordinator for Tufts Ballroom Team </div>
+      </div>
+      </div>
+      <div class="resume-header">
         <p> Experience </p>
         <hr/> 
       </div>
-      <div class="section-header">
+      <div class="resume-section">
+      </div>
+      <div class="resume-header">
         <p> Skills </p>
         <hr/> 
+      <div class="resume-section">
+      
+      </div>
       </div>
     </div>
   </body>
