--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <div class="page-body">
       <div class="resume">
       <h1> Lexi Galantino </h1>
-      <h3> github.com/galantlex &middot galantino.pw &middot contact@galantino.pw </h3>
+      <h3> github.com/galantlex &middot http://galantino.pw &middot contact@galantino.pw </h3>
       <div class="resume-header">
         <p> Education </p>
         <hr/> 
@@ -30,8 +30,8 @@
         <div class="resume-subheader"> Coursework </div>
         <div class="resume-text"> Programming Languages &middot Machine Structure and Assembly Language &middot Data Structures &middot Organic Chemistry 
                &middot General Genetics &middot Brain and Behavior &middot Biochemistry </div>
-       </div>
-       <div class="row">
+      </div>
+      <div class="row">
         <div class="resume-subheader">Leadership </div> 
         <div class="resume-text">Internal Logistics Officer for Women in Computer Science &middot Competition Coordinator for Tufts Ballroom Team </div>
       </div>
@@ -41,6 +41,65 @@
         <hr/> 
       </div>
       <div class="resume-section">
+      
+        <div class="row">
+        <div class="resume-subheader">Summers 2015 &amp 2016 </div> 
+        <div class="resume-text">
+          <div class="employer">
+            Neuropsychiatry Group, University of Pennsylvania &middot Philadelphia, PA
+         </div>
+         <div class="position"> Undergraduate researcher </div>
+         <ul>
+           <li> Developed an unbiased longitudinal pipeline to process diffusion tensor imaging (DTI) data
+          using DTI-TK toolkit, and developed a similar pipeline to process structural MRI data
+          using FreeSurfer toolkit </li>
+           <li> Certified as a tracer under the Harmonized Hippocampal Protocol (HarP) for manual
+          hippocampal segmentation </li>
+          <li> Acknowledged in published research for work relating to the development of the sMoCA, a
+          short form of the Montreal Cognitive Assessment test for dementia </li>
+         </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader"> Spring 2016 - Present </div> 
+        <div class="resume-text">
+          <div class="employer">
+            Tufts University Department of Computer Science &middot Medford, MA
+         </div>
+         <div class="position"> Teaching Assistant </div>
+         <ul>
+           <li> Led recitation sections of upper-level Programming Languages course </li>
+           <li> Assisted in lab sections of intro-level Data Structures course </li>
+           <li> Provided one-on-one support for students in both classes </li>
+         </ul>
+        </div> 
+      </div>
+      <div class="row">
+        <div class="resume-subheader"> Spring 2016 </div> 
+        <div class="resume-text">
+          <div class="employer">
+            JumboCode &middot Medford, MA
+         </div>
+         <div class="position"> Team Member </div>
+         <ul>
+           <li> Developed front end of a patient information database for a local human service agency </li>
+           <li> Presented product at demo fair in front of peers, professors, and company representatives </li>
+         </ul>
+        </div>
+       </div>
+      <div class="row">
+        <div class="resume-subheader"> Winter 2016 </div>
+        <div class="resume-text">
+          <div class="employer">
+            Springfield Hospital &middot Springfield, PA
+         </div>
+         <div class="position"> Volunteer </div>
+         <ul>
+           <li> Interacted with patients and attended to their non-medical needs </li>
+           <li> Shadowed Emergency Department physicians in all facets of patient care </li>
+         </ul>
+        </div>
+      </div>
       </div>
       <div class="resume-header">
         <p> Skills </p>
@@ -49,6 +108,6 @@
       
       </div>
       </div>
-    </div>
+     </div>
   </body>
 </html>
