add skills and outline of projects

--- a/resume.html
+++ b/resume.html
@@ -103,9 +103,74 @@
       </div>
       <div class="resume-header">
         <p> Skills </p>
-        <hr/> 
+        <hr/>
+      </div>
       <div class="resume-section">
-      
+        <div class="row">
+        <div class="resume-subheader">
+          Programming Languages
+        </div>
+        <div class="resume-text">
+          C &middot C++ &middot Ruby &middot Scheme &middot SML &middot HTML &middot CSS &middot LaTeX
+        </div>
+        </div>
+        <div class="row">
+        <div class="resume-subheader">
+          Certifications
+        </div>
+        <div class="resume-text">
+          CPR &plusmn AED &middot CITI Good Clinical Practice &middot CITI Biomedical and Behavioral Research
+        </div>
+        </div>
+        <div class="row">
+        <div class="resume-subheader">
+          Foreign Language
+        </div>
+        <div class="resume-text">
+          Spanish - Limited Working Proficiency
+        </div>
+        </div>
+      </div>
+      <div class="resume-header">
+        <p> Projects </p>
+        <hr/>
+      </div>
+      <div class="resume-section">
+      <div class="row">
+        <div class="resume-subheader">
+          TBA Dancer
+        </div>
+        <div class="resume-text">
+        </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader">
+          Megabites
+        </div>
+        <div class="resume-text">
+        </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader">
+          Boolean Satisfiability Solver
+        </div>
+        <div class="resume-text">
+        </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader">
+          Hindley-Milner Type Inferencer
+        </div>
+        <div class="resume-text">
+        </div>
+      </div>
+      <div class="row">
+        <div class="resume-subheader">
+          JPEG-like Image Compressor
+        </div>
+        <div class="resume-text">
+        </div>
+      </div>
       </div>
       </div>
      </div>
