complete projects section of resume

--- a/resume.html
+++ b/resume.html
@@ -24,16 +24,19 @@
       <div class="resume-section">
       <div class="row">
         <div class="resume-subheader"> Tufts University </div>
-        <div class="resume-text"> Class of 2018 &middot Biopsychology &amp Computer Science &middot 3.88 GPA </div>
+        <div class="resume-text"> Class of 2018 &middot Biopsychology &amp Computer 
+        Science </div>
       </div>
       <div class="row">
         <div class="resume-subheader"> Coursework </div>
-        <div class="resume-text"> Programming Languages &middot Machine Structure and Assembly Language &middot Data Structures &middot Organic Chemistry 
-               &middot General Genetics &middot Brain and Behavior &middot Biochemistry </div>
+        <div class="resume-text"> Programming Languages &middot Machine Structure and 
+        Assembly Language &middot Data Structures &middot Organic Chemistry 
+        &middot General Genetics &middot Brain and Behavior &middot Biochemistry </div>
       </div>
       <div class="row">
         <div class="resume-subheader">Leadership </div> 
-        <div class="resume-text">Internal Logistics Officer for Women in Computer Science &middot Competition Coordinator for Tufts Ballroom Team </div>
+        <div class="resume-text">Internal Logistics Officer for Women in Computer Science 
+        &middot Competition Coordinator for Tufts Ballroom Team </div>
       </div>
       </div>
       <div class="resume-header">
@@ -50,13 +53,13 @@
          </div>
          <div class="position"> Undergraduate researcher </div>
          <ul>
-           <li> Developed an unbiased longitudinal pipeline to process diffusion tensor imaging (DTI) data
-          using DTI-TK toolkit, and developed a similar pipeline to process structural MRI data
-          using FreeSurfer toolkit </li>
-           <li> Certified as a tracer under the Harmonized Hippocampal Protocol (HarP) for manual
-          hippocampal segmentation </li>
-          <li> Acknowledged in published research for work relating to the development of the sMoCA, a
-          short form of the Montreal Cognitive Assessment test for dementia </li>
+           <li> Developed an unbiased longitudinal pipeline to process diffusion tensor 
+          imaging (DTI) data using DTI-TK toolkit, and developed a similar pipeline to process 
+          structural MRI data using FreeSurfer toolkit </li>
+           <li> Certified as a tracer under the Harmonized Hippocampal Protocol (HarP) 
+           for manual hippocampal segmentation </li>
+          <li> Acknowledged in published research for work relating to the development of
+          the sMoCA, a short form of the Montreal Cognitive Assessment test for dementia </li>
          </ul>
         </div>
       </div>
@@ -82,8 +85,10 @@
          </div>
          <div class="position"> Team Member </div>
          <ul>
-           <li> Developed front end of a patient information database for a local human service agency </li>
-           <li> Presented product at demo fair in front of peers, professors, and company representatives </li>
+           <li> Developed front end of a patient information database for a local human service 
+           agency </li>
+           <li> Presented product at demo fair in front of peers, professors, and company 
+           representatives </li>
          </ul>
         </div>
        </div>
@@ -111,7 +116,8 @@
           Programming Languages
         </div>
         <div class="resume-text">
-          C &middot C++ &middot Ruby &middot Scheme &middot SML &middot HTML &middot CSS &middot LaTeX
+          C &middot C++ &middot Ruby &middot Scheme &middot SML &middot HTML &middot 
+          CSS &middot LaTeX
         </div>
         </div>
         <div class="row">
@@ -119,7 +125,8 @@
           Certifications
         </div>
         <div class="resume-text">
-          CPR &plusmn AED &middot CITI Good Clinical Practice &middot CITI Biomedical and Behavioral Research
+          CPR &plusmn AED &middot CITI Good Clinical Practice &middot CITI Biomedical and 
+          Behavioral Research
         </div>
         </div>
         <div class="row">
@@ -141,6 +148,8 @@
           TBA Dancer
         </div>
         <div class="resume-text">
+          { Ruby on Rails } &middot A webapp to help collegiate ballroom dancers find partners for
+          upcoming competitions. Hosted at tba-dancer.herokuapp.com. 
         </div>
       </div>
       <div class="row">
@@ -148,6 +157,8 @@
           Megabites
         </div>
         <div class="resume-text">
+          { Ruby on Rails } &middot A collaborative food ordering webapp for finding other people 
+          in the same building to order delivery with. Built for Tufts University PolyHack, 2016.
         </div>
       </div>
       <div class="row">
@@ -155,6 +166,8 @@
           Boolean Satisfiability Solver
         </div>
         <div class="resume-text">
+          { Scheme } &middot Uses continuation passing style as a technique to solve complex boolean 
+          formulas
         </div>
       </div>
       <div class="row">
@@ -162,13 +175,17 @@
           Hindley-Milner Type Inferencer
         </div>
         <div class="resume-text">
+          { SML } &middot Implements type inferencer for subset of ML using Hindley-Milner type 
+          inference rules
         </div>
       </div>
       <div class="row">
         <div class="resume-subheader">
-          JPEG-like Image Compressor
+          Image Compressor
         </div>
         <div class="resume-text">
+          { C } &middot Compresses PPM images to 1/4 their original size using a compression algorithm 
+          similar to the one used for JPEG.
         </div>
       </div>
       </div>
