add clipart to projects

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <li class="nav-link"> <a href="projects.html">Projects </a> </li>
       </ul>
     </nav>
-    <div class="page-body">
-      <h1> Lexi Galantino </h1>
-      <img src="Professional_Picture.png" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
+    <div class="page-body rounded-corners">
+      <div class="home">
+        <h1> Lexi Galantino </h1>
+        <img src="Professional_Picture.png" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
+      </div>
     </div>
   </body>
 </html>
