--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,52 @@
         <li class="nav-link active"> <a href="projects.html">Projects </a> </li>
       </ul>
     </nav>
-    <div class="page-body">
+    <div class="page-body rounded-corners">
+      <div class="row">
+        <div class="project-pic">
+          <img src="ballroom.svg" alt="Ballroom dance clipart" class="project-image"/>
+        </div>
+        <div class="project-text">
+          <a href="http://github.com/galantlex/tba-dancer"> <h1>TBA Dancer </h1></a>
+          
+        </div>
+      </div>
+      <hr/>
+      <div class="row">
+        <div class="project-text">
+          <a href="http://github.com/galantlex/megabites"> <h1>  Megabites  </h1></a>
+        </div>
+        <div class="project-pic">
+          <img src="pizza.png" alt="Pizza clipart" class="project-image"/>
+        </div>
+      </div>
+      <hr/>
+      <div class="row">
+        <div class="project-pic">
+          <img src="satsolver.png" alt="Green check mark and red x clipart" class="project-image"/>
+        </div>
+        <div class="project-text">
+          <h1> Boolean Satisfiability Solver </h1>
+        </div>
+      </div>
+      <hr/>
+      <div class="row">
+        <div class="project-text">
+          <h1> Hindley-Milner Type Inferencer </h1>
+        </div>
+        <div class="project-pic">
+          <img src="inference.png" alt="magnifying glass" class="project-image"/>
+        </div>
+      </div>
+      <hr/>
+      <div class="row">
+        <div class="project-pic">
+          <img src="pics.png" alt="Clipart of photos" class="project-image"/>
+        </div>
+        <div class="project-text">
+          <h1> Image Compressor </h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
