--- a/projects.html
+++ b/projects.html
@@ -15,48 +15,87 @@
     </nav>
     <div class="page-body rounded-corners">
       <div class="row">
-        <div class="project-pic">
+        <div class="project-text pull-left">
+          <h1>TBA Dancer </h1>
+          <p> Created over winter break 2016/2017, this app is built specifically for the collegiate
+          ballroom community. Often times competitive ballroom dancers find themselves without
+          a partner for an upcoming competition, and when this happens, they are said to be
+          "dancing TBA," meaning that their partner is to be announced. Sometimes TBA dancers
+          try to find each other through the Facebook pages of the competitions, and sometimes
+          the competitions themselves try to pair up dances ahead of time, but usually dancers just
+          end up frantically scrambling to find a partner moments before competing. This is super
+          stressful! </p>
+          <p> So, partially to ameliorate this situation, and partially for my own educatinal benefit,
+          I spent this past winter break building TBA Dancer. This Ruby on Rails webapp allows users
+          to sign in with Google auth and browse current posts by other dancers who need partners.
+          Then, if they don't find a suitable partner already listed, they can create their own post.
+          Unlike the Facebook pages, my app is only for finding partners, and each page displays
+          only the open partner searches for a single competition. As I continue to work on this app,
+          I hope to add a filter feature as well, which will hopefully make finding a TBA partner 
+          easier than ever =] </p>
+          <p> If you're interested, check out the app <a href="http://tba-dancer.herokuapp.com"> here</a>,
+          or the source code <a href="http://github.com/galantlex/tba-dancer">here</a>. If you're even
+          *more* interested, you can also check out a little blog I kept while tinkering and learning
+          how to make the app <a href="http://github.com/galantlex/tba-dancer/wiki">here</a>!</p>
+        </div>
+        <div class="project-pic pull-right">
           <img src="ballroom.svg" alt="Ballroom dance clipart" class="project-image"/>
         </div>
-        <div class="project-text">
-          <a href="http://github.com/galantlex/tba-dancer"> <h1>TBA Dancer </h1></a>
-          
-        </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="project-text">
-          <a href="http://github.com/galantlex/megabites"> <h1>  Megabites  </h1></a>
-        </div>
-        <div class="project-pic">
+        <div class="project-pic pull-left">
           <img src="pizza.png" alt="Pizza clipart" class="project-image"/>
         </div>
+        <div class="project-text pull-right">
+          <h1>  Megabites  </h1>
+          <p>Have you ever wanted to order food for delivery, but haven't wanted to foot the whole delivery charge
+          or meet the minimum yourself? Maybe you live in a dorm with all your friends, so you can simply ask 
+          the group chat, "Who's up for dim sum?" But maybe you're instead in an office building, or a computer
+          science lab, and you're instead surrounded by acquaintances with whom you are *not* in a group chat.
+          What to do?</p>
+          <p> This app, built for Tufts Polyhack 2016, gives users an online platform to connect with other people
+          in their vicinity who also want to split a delivery order. The app is built on Rails, and is currently hosted
+          <a href="http://mighty-refuge-19588.herokuapp.com">here</a>, with the source code 
+          <a href="http://github.com/galantlex/megabites">here</a>. Working with my team at my first hackathon
+          was a blast!</p>
+        </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="project-pic">
+        <div class="project-text pull-left">
+          <h1> Boolean Satisfiability Solver </h1>
+          <p> Written for Tufts' Programming Languages class in 2017, this project is built in scheme 
+          and uses continuation passing style as a technique to solve complex boolean formulas.</p>
+        </div>
+        <div class="project-pic pull-right">
           <img src="satsolver.png" alt="Green check mark and red x clipart" class="project-image"/>
         </div>
-        <div class="project-text">
-          <h1> Boolean Satisfiability Solver </h1>
-        </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="project-text">
-          <h1> Hindley-Milner Type Inferencer </h1>
-        </div>
-        <div class="project-pic">
+        <div class="project-pic pull-left">
           <img src="inference.png" alt="magnifying glass" class="project-image"/>
         </div>
+        <div class="project-text pull-right">
+          <h1> Hindley-Milner Type Inferencer </h1>
+          <p> Also written for Programming Languages in 2017, this project is built in SML and implements
+          hindley-milner type inferencing rules for an ML interpreter otherwise written by 
+          <a href="http://www.cs.tufts.edu/~nr/"> Norman Ramsey</a>. </p>
+        </div>
       </div>
       <hr/>
       <div class="row">
-        <div class="project-pic">
-          <img src="pics.png" alt="Clipart of photos" class="project-image"/>
-        </div>
-        <div class="project-text">
+        <div class="project-text pull-left">
           <h1> Image Compressor </h1>
+          <p>This program was written in C with <a href="http://edobranov.github.io/">Evgeni Dobranov</a> for
+          Tufts' Machine Structure and Assembly Programming course in Fall 2016. Given a PPM image, it
+          compresses the file down through 8 stages of compression, resulting in an output about 1/3rd the
+          size of the original file. Then, the program can read in that compressed file and decompress it,
+          producing an image with less than 4% error compared with the original image, on all test images.</p>
+        </div>
+        <div class="project-pic pull-right">
+          <img src="pics.png" alt="Clipart of photos" class="project-image"/>
         </div>
       </div>
     </div>
