--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <div class="page-body">
       <div class="resume">
       <h1> Lexi Galantino </h1>
-      <h3> github.com/galantlex &middot http://galantino.pw &middot contact@galantino.pw </h3>
+      <h3> github.com/galantlex &middot www.galantino.pw &middot contact@galantino.pw </h3>
       <div class="resume-header">
         <p> Education </p>
         <hr/> 
@@ -184,7 +184,7 @@
           Image Compressor
         </div>
         <div class="resume-text">
-          { C } &middot Compresses PPM images to 1/4 their original size using a compression algorithm 
+          { C } &middot Compresses PPM images to 1/3 their original size using a compression algorithm 
           similar to the one used for JPEG.
         </div>
       </div>
