Replace picture and add welcome message

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Lexi Galantino</title>
@@ -16,7 +17,10 @@
     <div class="page-body rounded-corners">
       <div class="home">
         <h1> Lexi Galantino </h1>
-        <img src="Professional_Picture.png" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
+        <img src="professional_picture.jpg" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
+        <p> Hello! Welcome to my website. The site you see here now is built specifically for Comp20: Web Programming at
+        Tufts University, a course I am currently taking. Many of the design and content choices you see in this site in its
+        current state are for the specified assignment. Enjoy! </p>
       </div>
     </div>
   </body>
