--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lexi Galantino</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
@@ -17,7 +17,7 @@
     <div class="page-body rounded-corners">
       <div class="home">
         <h1> Lexi Galantino </h1>
-        <img src="professional_picture.jpg" alt="A professional-looking picture of Lexi" width="200px" class="rounded-corners" >
+        <img src="professional_picture.jpg" alt="A professional-looking picture of Lexi" class="rounded-corners" id="index-pic" >
         <p> Hello! Welcome to my website. The site you see here now is built specifically for Comp20: Web Programming at
         Tufts University, a course I am currently taking. Many of the design and content choices you see in this site in its
         current state are for the specified assignment. Enjoy! </p>
