--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lexi Galantino</title>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
@@ -17,7 +17,7 @@
     <div class="page-body">
       <div class="resume">
       <h1> Lexi Galantino </h1>
-      <h3> github.com/galantlex &middot www.galantino.pw &middot contact@galantino.pw </h3>
+      <h3> github.com/galantlex &middot; www.galantino.pw &middot; contact@galantino.pw </h3>
       <div class="resume-header">
         <p> Education </p>
         <hr/> 
@@ -25,19 +25,19 @@
       <div class="resume-section">
       <div class="row">
         <div class="resume-subheader"> Tufts University </div>
-        <div class="resume-text"> Class of 2018 &middot Biopsychology &amp Computer 
+        <div class="resume-text"> Class of 2018 &middot; Biopsychology &amp; Computer 
         Science </div>
       </div>
       <div class="row">
         <div class="resume-subheader"> Coursework </div>
-        <div class="resume-text"> Programming Languages &middot Machine Structure and 
-        Assembly Language &middot Data Structures &middot Organic Chemistry 
-        &middot General Genetics &middot Brain and Behavior &middot Biochemistry </div>
+        <div class="resume-text"> Programming Languages &middot; Machine Structure and 
+        Assembly Language &middot; Data Structures &middot; Organic Chemistry 
+        &middot; General Genetics &middot; Brain and Behavior &middot; Biochemistry </div>
       </div>
       <div class="row">
         <div class="resume-subheader">Leadership </div> 
         <div class="resume-text">Internal Logistics Officer for Women in Computer Science 
-        &middot Competition Coordinator for Tufts Ballroom Team </div>
+        &middot; Competition Coordinator for Tufts Ballroom Team </div>
       </div>
       </div>
       <div class="resume-header">
@@ -47,10 +47,10 @@
       <div class="resume-section">
       
         <div class="row">
-        <div class="resume-subheader">Summers 2015 &amp 2016 </div> 
+        <div class="resume-subheader">Summers 2015 &amp; 2016 </div> 
         <div class="resume-text">
           <div class="employer">
-            Neuropsychiatry Group, University of Pennsylvania &middot Philadelphia, PA
+            Neuropsychiatry Group, University of Pennsylvania &middot; Philadelphia, PA
          </div>
          <div class="position"> Undergraduate researcher </div>
          <ul>
@@ -68,7 +68,7 @@
         <div class="resume-subheader"> Spring 2016 - Present </div> 
         <div class="resume-text">
           <div class="employer">
-            Tufts University Department of Computer Science &middot Medford, MA
+            Tufts University Department of Computer Science &middot; Medford, MA
          </div>
          <div class="position"> Teaching Assistant </div>
          <ul>
@@ -82,7 +82,7 @@
         <div class="resume-subheader"> Spring 2016 </div> 
         <div class="resume-text">
           <div class="employer">
-            JumboCode &middot Medford, MA
+            JumboCode &middot; Medford, MA
          </div>
          <div class="position"> Team Member </div>
          <ul>
@@ -97,7 +97,7 @@
         <div class="resume-subheader"> Winter 2016 </div>
         <div class="resume-text">
           <div class="employer">
-            Springfield Hospital &middot Springfield, PA
+            Springfield Hospital &middot; Springfield, PA
          </div>
          <div class="position"> Volunteer </div>
          <ul>
@@ -117,8 +117,8 @@
           Programming Languages
         </div>
         <div class="resume-text">
-          C &middot C++ &middot Ruby &middot Scheme &middot SML &middot HTML &middot 
-          CSS &middot LaTeX
+          C &middot; C++ &middot; Ruby &middot; Scheme &middot; SML &middot; HTML &middot; 
+          CSS &middot; LaTeX
         </div>
         </div>
         <div class="row">
@@ -126,7 +126,7 @@
           Certifications
         </div>
         <div class="resume-text">
-          CPR &plusmn AED &middot CITI Good Clinical Practice &middot CITI Biomedical and 
+          CPR &plusmn AED &middot; CITI Good Clinical Practice &middot; CITI Biomedical and 
           Behavioral Research
         </div>
         </div>
@@ -149,7 +149,7 @@
           TBA Dancer
         </div>
         <div class="resume-text">
-          { Ruby on Rails } &middot A webapp to help collegiate ballroom dancers find partners for
+          { Ruby on Rails } &middot; A webapp to help collegiate ballroom dancers find partners for
           upcoming competitions. Hosted at tba-dancer.herokuapp.com. 
         </div>
       </div>
@@ -158,7 +158,7 @@
           Megabites
         </div>
         <div class="resume-text">
-          { Ruby on Rails } &middot A collaborative food ordering webapp for finding other people 
+          { Ruby on Rails } &middot; A collaborative food ordering webapp for finding other people 
           in the same building to order delivery with. Built for Tufts University PolyHack, 2016.
         </div>
       </div>
@@ -167,7 +167,7 @@
           Boolean Satisfiability Solver
         </div>
         <div class="resume-text">
-          { Scheme } &middot Uses continuation passing style as a technique to solve complex boolean 
+          { Scheme } &middot; Uses continuation passing style as a technique to solve complex boolean 
           formulas
         </div>
       </div>
@@ -176,7 +176,7 @@
           Hindley-Milner Type Inferencer
         </div>
         <div class="resume-text">
-          { SML } &middot Implements type inferencer for subset of ML using Hindley-Milner type 
+          { SML } &middot; Implements type inferencer for subset of ML using Hindley-Milner type 
           inference rules
         </div>
       </div>
@@ -185,7 +185,7 @@
           Image Compressor
         </div>
         <div class="resume-text">
-          { C } &middot Compresses PPM images to 1/3 their original size using a compression algorithm 
+          { C } &middot; Compresses PPM images to 1/3 their original size using a compression algorithm 
           similar to the one used for JPEG.
         </div>
       </div>
