add semicolon to final escaped character

--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
           Certifications
         </div>
         <div class="resume-text">
-          CPR &plusmn AED &middot; CITI Good Clinical Practice &middot; CITI Biomedical and 
+          CPR &plusmn; AED &middot; CITI Good Clinical Practice &middot; CITI Biomedical and 
           Behavioral Research
         </div>
         </div>
