replace first pic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="page-body rounded-corners">
       <div class="home">
         <h1> Lexi Galantino </h1>
-        <img src="professional_picture.jpg" alt="A professional-looking picture of Lexi" class="rounded-corners" id="index-pic" >
+        <img src="Me.jpg" alt="A professional-looking picture of Lexi" class="rounded-corners" id="index-pic" >
         <p> Hello! Welcome to my website. The site you see here now is built specifically for Comp20: Web Programming at
         Tufts University, a course I am currently taking. Many of the design and content choices you see in this site in its
         current state are for the specified assignment. Enjoy! </p>
