--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <nav>
       <ul class="nav-list rounded-corners">
         <li class="nav-link rounded-corners active"> <a href="index.html">Home</a> </li>
-        <li class="nav-link"> <a href="bio.html"> Bio </a> </li>
         <li class="nav-link"> <a href="resume.html"> Resume </a></li>
         <li class="nav-link"> <a href="projects.html">Projects </a> </li>
       </ul>
@@ -18,9 +17,7 @@
       <div class="home">
         <h1> Lexi Galantino </h1>
         <img src="Me.jpg" alt="A professional-looking picture of Lexi" class="rounded-corners" id="index-pic" >
-        <p> Hello! Welcome to my website. The site you see here now is built specifically for Comp20: Web Programming at
-        Tufts University, a course I am currently taking. Many of the design and content choices you see in this site in its
-        current state are for the specified assignment. Enjoy! </p>
+        <h2> Web Developer - Student - Work In Progress </h2>
       </div>
     </div>
   </body>
