--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Lexi Galantino</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Ovo" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
     <link rel="shortcut icon" href="corgiclipart.ico" />
   </head>
