--- a/projects.html
+++ b/projects.html
@@ -23,20 +23,20 @@
           a partner for an upcoming competition, and when this happens, they are said to be
           "dancing TBA," meaning that their partner is to be announced. Sometimes TBA dancers
           try to find each other through the Facebook pages of the competitions, and sometimes
-          the competitions themselves try to pair up dances ahead of time, but usually dancers just
+          the competitions themselves try to pair up dancers ahead of time, but usually dancers
           end up frantically scrambling to find a partner moments before competing. This is super
           stressful! </p>
-          <p> So, partially to ameliorate this situation, and partially for my own educatinal benefit,
+          <p> So, partially to ameliorate this situation, and partially for my own educatoinal benefit,
           I spent this past winter break building TBA Dancer. This Ruby on Rails webapp allows users
           to sign in with Google auth and browse current posts by other dancers who need partners.
           Then, if they don't find a suitable partner already listed, they can create their own post.
           Unlike the Facebook pages, my app is only for finding partners, and each page displays
           only the open partner searches for a single competition. As I continue to work on this app,
           I hope to add a filter feature as well, which will hopefully make finding a TBA partner
-          easier than ever =] </p>
+          easier than ever. </p>
           <p> If you're interested, check out the app <a href="http://tba-dancer.herokuapp.com"> here</a>,
           or the source code <a href="http://github.com/galantlex/tba-dancer">here</a>. If you're even
-          *more* interested, you can also check out a little blog I kept while tinkering and learning
+          <em>more</em> interested, you can also check out a little blog I kept while tinkering and learning
           how to make the app <a href="http://github.com/galantlex/tba-dancer/wiki">here</a>!</p>
         </div>
         <div class="project-pic pull-right">
@@ -53,7 +53,7 @@
           <p>Have you ever wanted to order food for delivery, but haven't wanted to foot the whole delivery charge
           or meet the minimum yourself? Maybe you live in a dorm with all your friends, so you can simply ask
           the group chat, "Who's up for dim sum?" But maybe you're instead in an office building, or a computer
-          science lab, and you're instead surrounded by acquaintances with whom you are *not* in a group chat.
+          science lab, so you're instead surrounded by acquaintances with whom you are <em>not</em> in a group chat.
           What to do?</p>
           <p> This app, built for Tufts Polyhack 2016, gives users an online platform to connect with other people
           in their vicinity who also want to split a delivery order. The app is built on Rails, and is currently hosted
@@ -72,13 +72,13 @@
           through repeated function calls. Typically this includes "success" and "failure" continuations, which
           are called when one of those trial-and-error solutions either succeeds or fails, respectively. </p>
 
-          <p> In the case of this project, the solver takes a pre-fix formula, such as "(and a b)", and tries to find boolean
-          substitutions which make the formula true. It looks at the operator, "and", and knows that for the whole
+          <p> In the case of this project, the solver takes a pre-fix boolean formula, such as "(and a b)", and tries to find boolean
+          substitutions which make the formula true. It looks at the operator, "and" in this case, and knows that for the whole
           formula to be true, the rest of the terms in the list must all be true. It then looks at the first term, "a", and
-          makes that true by trying the substitution {a => #t}. Then it calls the "success" continuation, which sees "b"
+          makes that true by trying the substitution {a => #t}. Finally, it calls the "success" continuation, which sees "b"
           and adds the substitution {b => #t}. </p>
 
-          <p>Now it has {a => #t, b => #t}, and the formula is solved! It calls the final
+          <p>Now it has {a => #t, b => #t}, and the formula is solved! It now calls the final
           "success" continuation, which delivers the substitution to the user. The process is more complicated when
           you throw in "not"s and "or"s, but that's essentially it! If, in the end, there is no solution that can make the
           formula true, then the solver returns the final failure continuation of "no-solution".</p>
