--- a/index.html
+++ b/index.html
@@ -4,21 +4,39 @@
     <title>Lexi Galantino</title>
     <link href="https://fonts.googleapis.com/css?family=Ovo|Source+Sans+Pro" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <link rel="shortcut icon" href="corgiclipart.ico" />
+    <link rel="shortcut icon" href="corgiclipart.png" />
   </head>
   <body>
-    <nav>
-      <ul class="nav-list rounded-corners">
-        <li class="nav-link rounded-corners active"> <a href="index.html">Home</a> </li>
-        <li class="nav-link"> <a href="resume.html"> Resume </a></li>
-        <li class="nav-link"> <a href="projects.html">Projects </a> </li>
-      </ul>
-    </nav>
     <div class="page-body rounded-corners">
       <div class="home">
         <h1> Lexi Galantino </h1>
         <img src="Me.jpg" alt="A professional-looking picture of Lexi" class="rounded-corners" id="index-pic" >
-        <h2> Web Developer - Student - Work In Progress </h2>
+        <h2>
+          <ul>
+            <li class="dropdown"><div>
+              <a href="javascript:void(0)" class="dropbtn">Web Developer</a>
+              <div class="dropdown-content">
+                <a href="resume.html">Resume</a>
+                <a href="projects.html">Projects</a>
+              </div>
+              <div>
+            </li>
+            &middot;
+            <li class="dropdown">
+              <a href="javascript:void(0)" class="dropbtn">Pre-med Student</a>
+              <div class="dropdown-content">
+                <a href="#">Coming soon</a>
+              </div>
+            </li>
+            &middot;
+            <li class="dropdown">
+              <a href="javascript:void(0)" class="dropbtn">Sound Designer</a>
+              <div class="dropdown-content">
+                <a href="#">Coming soon</a>
+              </div>
+            </li>
+          </ul>
+        </h2>
       </div>
     </div>
   </body>
