--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <title>Lexi Galantino</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Ovo" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <link rel="shortcut icon" href="corgiclipart.ico" />
+    <link rel="shortcut icon" href="corgiclipart.png" />
   </head>
   <body>
     <nav>
