create jekyll site

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li class="dropdown"><div>
               <a href="javascript:void(0)" class="dropbtn">Web Developer</a>
               <div class="dropdown-content">
-                <a href="resume.html">Resume</a>
-                <a href="projects.html">Projects</a>
+                <a href="developer/resume.html">Resume</a>
+                <a href="developer/projects.html">Projects</a>
               </div>
               <div>
             </li>
