--- a/developer/projects.html
+++ b/developer/projects.html
@@ -3,8 +3,8 @@
   <head>
     <title>Lexi Galantino</title>
     <link href="https://fonts.googleapis.com/css?family=Ovo|Source+Sans+Pro" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <link rel="shortcut icon" href="corgiclipart.png" />
+    <link type="text/css" rel="stylesheet" href="../stylesheet.css" />
+    <link rel="shortcut icon" href="../corgiclipart.png" />
   </head>
   <body>
     <nav>
