--- a/developer/resume.html
+++ b/developer/resume.html
@@ -3,13 +3,13 @@
   <head>
     <title>Lexi Galantino</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Ovo" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="../stylesheet.css" />
-    <link rel="shortcut icon" href="../corgiclipart.png" />
+    <link type="text/css" rel="stylesheet" href="/stylesheet.css" />
+    <link rel="shortcut icon" href="/corgiclipart.png" />
   </head>
   <body>
     <nav>
       <ul class="nav-list rounded-corners">
-        <li class="nav-link rounded-corners"> <a href="index.html">Home</a> </li>
+        <li class="nav-link rounded-corners"> <a href="/">Home</a> </li>
         <li class="nav-link active"> <a href="resume.html"> Resume </a></li>
         <li class="nav-link"> <a href="projects.html">Projects </a> </li>
       </ul>
